--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,2 @@
 <h1>About us</h1>
-<p>We are working on our One Month Rails Pinteresting app!</p>
+<p>We are working on our One Month Rails Pinteresting app! My name is Andrew and I'm learning Ruby to benefit my career as an entrepreneur. </p>
